# pulve-calc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
config/: default.toml
docs/: USAGE.md
src/: calc.rs  config.rs  db.rs  main.rs  pdf.rs  ui.rs
