[package]
name = "pulve-calc"
version = "0.1.0"
edition = "2021"
description = "Calculateur de pulvérisation pour tracteur Landini et atomiseur"

[dependencies]
eframe = "0.31"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
open = "5"
printpdf = "0.7"
